--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,18 @@
 {
-    "extends": "next/core-web-vitals"
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "react/display-name": "off",
+        "import/no-anonymous-default-export": [
+            "error",
+            {
+                "allowArray": true,
+                "allowArrowFunction": true,
+                "allowAnonymousClass": true,
+                "allowAnonymousFunction": true,
+                "allowCallExpression": true, // The true value here is for backward compatibility
+                "allowLiteral": false,
+                "allowObject": false
+            }
+        ]
+    }
 }
