--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@prisma/client": "^5.6.0",
         "next": "14.0.2",
         "react": "^18",
         "react-dom": "^18"
@@ -22,6 +23,7 @@
         "eslint-config-next": "14.0.2",
         "postcss": "^8",
         "prettier": "3.1.0",
+        "prisma": "^5.6.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
     }
